--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="stylehome.css">
+    <link rel="stylesheet" href="style/stylehome.css">
+    <link rel="stylesheet" href="style/benefits.css">
 </head>
 <body>
     <header>
@@ -46,6 +47,31 @@
             
         </nav>
     </header>
+    <section class="blank">
+        <!-- CONTACT US -->
+    </section>
+    <section class="benefit_pg">
+        <!-- BENEFITS -->
+
+        <div class="container">
+            <h1 class="information">BENEFITS ❤️</h1>
+            <p class="description information">Our formula is crafted with powerful ingredients <br> for supporting your body's vitality and <br>enhancing your well-being.</p>
+            <div class="benefits">
+                <div class="benefit">
+                    <h3>01 🍔</h3>
+                    <p>Acts on anxiety and binge eating</p>
+                </div>
+                <div class="benefit">
+                    <h3>02 🔑</h3>
+                    <p>Supports metabolism and promotes fat burning</p>
+                </div>
+                <div class="benefit">
+                    <h3>03 🥤</h3>
+                    <p>Helps reduce fluid retention and body swelling</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
