--- a/index.html
+++ b/index.html
@@ -217,7 +217,6 @@ window.onload = () => {
 };
         </script>
 
-        <div class="blur-back"></div>
       </div>
     </section>
 
@@ -228,8 +227,8 @@ window.onload = () => {
             <h4>Social</h4>
           </li>
           <li>
-            <img src="" alt="" />
-            <img src="" alt="" />
+            <a href=""><img src="assets/Instagram.svg" alt="" /></a>
+            <a href=""><img src="assets/Facebook.png" alt="" /></a>
           </li>
         </div>
         <div class="coluna2">
@@ -237,9 +236,9 @@ window.onload = () => {
             <li>
               <h4>About</h4>
             </li>
-            <li>About the Products</li>
-            <li>Benefits</li>
-            <li>Testimony</li>
+            <a href=""><li style="word-break: nowrap;">About the Products</li></a>
+            <a href=""><li>Benefits</li></a>
+            <a href=""><li>Testimony</li></a>
           </ul>
         </div>
         <div class="coluna3">
@@ -248,12 +247,12 @@ window.onload = () => {
               <h4>Seller</h4>
             </li>
             <li>Cristiani Camilotti</li>
-            <li>+44 7392002273</li>
+            <a href=""><li>+44 7392002273</li></a>
           </ul>
         </div>
       </div>
       <div class="logo-footer">
-        <img src="assets/logoprincipal.svg" alt="" />
+        <img src="assets/logoprincipal.svg" alt="" style="" />
       </div>
     </footer>
   </body>
