--- a/index.html
+++ b/index.html
@@ -40,11 +40,14 @@
         <div class="box-menu">
           <div class="vertical-line2"></div>
           <div>
-            <a href=""> <img src="assets/menubutton.svg" alt="" /></a>
+            <a href=""> <img src="assets/united-kingdom.png" alt="" style="width: 32px; height: 32px;" /></a>
+            <a href=""> <img src="assets/brazil-flag.png" alt="" style="display: none;" /></a>
           </div>
         </div>
       </nav>
     </header>
+
+    
 
     <div class="hero-section">
       <h1 class="titulo-hero">CONTACT <span>US</span></h1>
@@ -199,8 +202,8 @@
           .append-buttons button {
             display: inline-block;
             cursor: pointer;
-            border: 1px solid #007aff;
-            color: #007aff;
+            border: 1px solid #f28705;
+            color: #f28705;
             text-decoration: none;
             padding: 4px 10px;
             border-radius: 4px;
@@ -303,6 +306,8 @@
         <img src="assets/logoprincipal.svg" alt="" style="" />
       </div>
     </footer>
+
+    
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
