--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <header>
       <nav class="header">
     <div class="nav-list">
-            <a href="">About</a>
+            <a href="#aboutroll">About</a>
             <a href="">Contact</a>
-            <a href="">Results</a>
-            <a href="">Benefits</a>
+            <a href="#resultsroll">Results</a>
+            <a href="#benefitsroll">Benefits</a>
         <div class="vertical-line1"></div>
     </div>
 
@@ -68,7 +68,7 @@
       <!-- BENEFITS -->
 
       <div class="container">
-        <h1 class="information">
+        <h1 class="information" id="benefitsroll">
           BENEFITS <img src="assets/benefits-health.png" alt="" />
         </h1>
         <p class="description information">
@@ -76,7 +76,7 @@
           for supporting your body's vitality and <br />enhancing your
           well-being.
         </p>
-        <div class="benefits">
+        <div class="benefits" >
           <div class="benefit">
             <div class="line-bloco">
               <h3>01</h3>
@@ -109,7 +109,7 @@
     </section>
 
     <section class="testimonials">
-      <div class="container-test">
+      <div class="container-test" id="testimonyroll">
         <h1 class="titulo-test">
           <img src="assets/duopeople.png" alt="" />TESTIMONIALS
         </h1>
@@ -132,9 +132,9 @@
     <section class="about_pg">
       <!-- ABOUT -->
 
-      <div class="about_container">
+      <div class="about_container" id="aboutroll">
         <h1 class="about_info">ABOUT</h1>
-        <p class="about_description about_info">
+        <p class="about_description about_info" >
           LipoRedux Fit supports weight loss by reducing cravings and boosting
           metabolism. <br />
           Not for pregnant women or those with heart issues.
@@ -150,7 +150,7 @@
       </div>
     </section>
 
-    <section class="bfaf">
+    <section class="bfaf" id="resultsroll">
       <div class="container-bfaf">
         <h1 class="titulo-bfaf">
           BEFORE AND AFTER<img src="assets/bfafpeople.png" alt="" />
@@ -284,11 +284,11 @@
             <li>
               <h4>About</h4>
             </li>
-            <a href=""
+            <a href="#aboutroll"
               ><li style="word-break: nowrap">About the Products</li></a
             >
-            <a href=""><li>Benefits</li></a>
-            <a href=""><li>Testimony</li></a>
+            <a href="#benefitsroll"><li>Benefits</li></a>
+            <a href="#testimonyroll"><li>Testimony</li></a>
           </ul>
         </div>
         <div class="coluna3">
